--- a/Views/MoreInfoPage.xaml
+++ b/Views/MoreInfoPage.xaml
@@ -1,17 +1,16 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-    xmlns:behaviors="clr-namespace:Prism.Behaviors;assembly=Prism.Forms" 
+<?xml version="1.0" encoding="utf-8"?>
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms" 
     prism:ViewModelLocator.AutowireViewModel="True" 
     x:Class="TapFitness.Views.MoreInfoPage"
     Padding="10,30,10,0"
-    BackgroundColor="Gray">
+   Title="BGR.TapFitness" 
+    BackgroundColor= "Silver"
+    >
 
-    <Button
-            Text="Click To Go Back"
-            />
+
+    <Label Text="hello" />
 
     
 </ContentPage>
-
