k im done u guys add stuff now

--- a/Views/TestPage.xaml
+++ b/Views/TestPage.xaml
@@ -4,7 +4,9 @@
     xmlns:behaviors="clr-namespace:Prism.Behaviors;assembly=Prism.Forms" 
     xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms" 
     prism:ViewModelLocator.AutowireViewModel="True" 
-    x:Class="TapFitness.Views.TestPage">
+    x:Class="TapFitness.Views.TestPage"
+    Padding="10,30,10,0"
+    BackgroundColor="Gray">
 
      <StackLayout
         HorizontalOptions="Center"
@@ -14,9 +16,19 @@
         <Button Text="go back" 
         Command="{Binding LastGoBackCommand}"/>
 
-        <Label Text="plzgodwork" />
-        <Label Text="{Binding Description, StringFormat='test: {0}'}" />
-         
+
+          <Frame
+                HasShadow="true"
+                BackgroundColor="Black"
+                >
+                 <Label Text="{Binding Result.Description, StringFormat='Exercise Description: {0}'}"
+            TextColor="White"/>
+                
+         </Frame>
+        
+
+
+
 
         
     </StackLayout>
