--- a/Views/PlanPage.xaml
+++ b/Views/PlanPage.xaml
@@ -16,8 +16,7 @@
         HorizontalOptions="Center"
         VerticalOptions="Fill"
         Padding="10,0,10,0">
-        <Button Text="clickfornav"
-            Command="{Binding ClickThisCommand}" />
+
         
         <Label x:Name="PlanTitleLabel"
             Style="{DynamicResource summarylabel}"
@@ -25,8 +24,9 @@
             Text="Here is your decided test plan! " />
 
         <Button x:Name="PlanGeneratorButton"
-            Text="Are you sure you want to do this? - Click here "
+            Text="Click here for exercises! "
             TextColor="Red"
+            Font="25"
             Command="{Binding PlanAPICommand}" />
 
          <ListView
@@ -66,7 +66,12 @@
                     </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
-        </ListView>              
+        </ListView>   
+
+        <Button Text="Click for Animation"
+            Style="{DynamicResource ButtonStyle}"
+            Command="{Binding ClickThisCommand}" />
+        
     </StackLayout>
 
     
