--- a/Views/TestPage.xaml
+++ b/Views/TestPage.xaml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-    xmlns:behaviors="clr-namespace:Prism.Behaviors;assembly=Prism.Forms" 
+    xmlns:behaviors="clr-namespace:Prism.Behaviors;assembly=Prism.Forms"
+    xmlns:local="clr-namespace:TapFitness"
+    xmlns:Controls="clr-namespace:TapFitness.Controls;assembly=TapFitness"
     xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms" 
     prism:ViewModelLocator.AutowireViewModel="True" 
     x:Class="TapFitness.Views.TestPage"
@@ -35,12 +37,14 @@
             Style="{DynamicResource ButtonStyle}"
             Clicked="Button_OnClicked"
             />
-         <!--<Grid x:Name="MainGrid"
-            BackgroundColor="Purple"
-            WidthRequest="150"
-            HeightRequest="150"
-            HorizontalOptions="Start"/>-->
 
+           
+      <Controls:Circle 
+            VerticalOptions="End"
+            x:Name="Circle"
+        WidthRequest="200" HeightRequest="200"
+       />
+        
 
         
     </StackLayout>
